examples/errors/unify.spl
main(){ return 1 + True; }